# planning-ai

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml
data/raw/: failed_downloads.txt  onspd_cambridge.parquet
data/staging/: gcpt3.parquet
planning_ai/: document.py  graph.py  logging.py  main.py  report.py  states.py  themes.py
planning_ai/chains/: fix_chain.py  hallucination_chain.py  iterate_chain.py  map_chain.py  policy_chain.py  reduce_chain.py  themes_chain.py
planning_ai/chains/prompts/: extract.txt  fix_hallucination.txt  hallucination.txt  map.txt  ocr.txt  policy.txt  reduce.txt  reduce_final.txt  themes.txt
planning_ai/common/: utils.py
planning_ai/documents/: document.py  figures.txt  introduction.txt  themes.txt
planning_ai/eval/: compare_summaries.py  eval.txt  summary.txt
planning_ai/llms/: llm.py
planning_ai/nodes/: hallucination_node.py  map_node.py  reduce_node.py
planning_ai/preprocessing/: azure_doc.py  gclp.py  gcpt3.py  geo.py  process_pdfs.py  web_comments.py
planning_ai/retrievers/: theme_retriever.py
reports/: Cambridge_Response_Summary.html  Cambridge_Response_Summary.qmd  DEMO_REPORT.qmd  eval.qmd
reports/DOCS/: DOCS.qmd
reports/_extensions/nrennie/PrettyPDF/: PrettyPDF.tex
src/: gpt4o_structured.py
src/planning_ai/: __init__.py  loaders.py  phi.py
