[project]
name = "planning-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain-core>=0.2.38",
    "langchain-community>=0.2.16",
    "langchain-openai>=0.1.23",
    "pillow>=10.4.0",
    "polars>=1.6.0",
    "fastexcel>=0.11.6",
    "spacy>=3.7.6",
    "pip>=24.2",
    "spacytextblob>=4.0.0",
    "transformers>=4.44.2",
    "langgraph>=0.2.18",
    "pdf2image>=1.17.0",
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "opencage>=3.0.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.2",
    "geodatasets>=2024.8.0",
    "grandalf>=0.8",
    "pygraphviz>=1.13",
    "pyqt6>=6.7.1",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.27.0",
]

[tool.setuptools]
packages = ["planning_ai"]
