[project]
name = "planning-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain-core>=0.2.38",
    "langchain-community>=0.2.16",
    "langchain-openai>=0.1.23",
    "pillow>=10.4.0",
    "polars>=1.6.0",
    "fastexcel>=0.11.6",
    "spacy>=3.7.6",
    "pip>=24.2",
    "spacytextblob>=4.0.0",
    "transformers>=4.44.2",
    "langgraph>=0.2.18",
    "pdf2image>=1.17.0",
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "matplotlib>=3.9.2",
    "pyqt6>=6.7.1",
    "presidio-anonymizer>=2.2.355",
    "presidio-analyzer>=2.2.355",
    "pypdf2>=3.0.1",
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.23",
    # "langchain-chroma>=0.1.4",
    "pypdf>=5.1.0",
    "geopandas>=1.0.1",
    "azure-ai-documentintelligence>=1.0.0",
    "langchain-unstructured>=0.1.6",
    "loguru>=0.7.3",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.27.0",
]

[tool.setuptools]
packages = ["planning_ai"]
